# me700_assignment2

./: README.md  assignment2_technical_correctness.ipynb  assignment_2_genAIuse.txt  pyproject.toml
.github/workflows/: tests.yml
src/a2/: direct_stiffness_method.py
tests/: test_direct_stiffness_method.py  test_math_utils.py
tutorials/: run_direct_stiffness_method.ipynb
